# vid2ascii

./: index.html
cpu/: CMakeCache.txt  CMakeLists.txt  Makefile  Vid2ASCII  Vid2ASCII.cpp  cmake_install.cmake
opencl/: CMakeCache.txt  CMakeLists.txt  Makefile  Vid2ASCII  Vid2ASCII.cpp  characters.h  cmake_install.cmake  to_ascii.cl
